tests/baselines/reference/initializedDestructuringAssignmentTypes.errors.txt
initializedDestructuringAssignmentTypes.ts(3,3): error TS2551: Property 'toFixed' does not exist on type 'string'. Did you mean 'fixed'?


==== initializedDestructuringAssignmentTypes.ts (1 errors) ====
    const [, a = ''] = ''.match('') || [];
    
    a.toFixed()
      ~~~~~~~
!!! error TS2551: Property 'toFixed' does not exist on type 'string'. Did you mean 'fixed'?
!!! related TS2728 lib.es2015.core.d.ts:--:--: 'fixed' is declared here.